# vorpal

./: .dockerignore  .env  .envrc  .gitignore  .ocamlformat  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  Dockerfile.dev  Dockerfile.sandbox  LICENSE  PROMPT.md  README.md  Vagrantfile  Vorpal.go.toml  Vorpal.py.toml  Vorpal.toml  Vorpal.ts.toml  build.rs  deps.sh  dev.sh  docker-compose.yaml  docker-compose.yml  dune-project  flake.nix  justfile  lychee.toml  makefile  rust-toolchain.toml  sandbox.sh  shell.nix  shell.sh  vorpal.lock.ncl  vorpal.ncl  vorpal.opam
cli/: Cargo.toml  build.rs
cli/src/: artifact.rs  build.rs  command.rs  config.rs  log.rs  main.rs  nickel.rs  worker.rs
cli/src/command/: agent.rs  artifact.rs  build.rs  config.rs  config_cmd.rs  credentials.rs  init.rs  inspect.rs  keys.rs  lock.rs  mod.rs  run.rs  settings.rs  start.rs  store.rs  system.rs
cli/src/command/agent/: export.rs  input.rs  manager.rs  markdown.rs  parser.rs  session.rs  state.rs  theme.rs  tui.rs  ui.rs
cli/src/command/artifact/: config.rs  inspect.rs  make.rs  mod.rs  prune.rs
cli/src/command/init/: mod.rs
cli/src/command/start/: agent.rs  auth.rs  mod.rs  registry.rs  worker.rs
cli/src/command/store/: archives.rs  hashes.rs  notary.rs  paths.rs
cli/src/command/system/: keys.rs  prune.rs
cli/src/worker/: mod.rs  source.rs  stream.rs
config/: Cargo.toml  language.ncl  schema.ncl
config/src/: artifact.rs  cross_platform.rs  main.rs  sandbox.rs  vorpal.rs
config/src/artifact/: cargo.rs  clippy.rs  cross_toolchain.rs  cross_toolchain_rootfs.rs  debian_slim.rs  go.rs  goimports.rs  gopls.rs  linux_debian.rs  linux_vorpal.rs  mod.rs  protoc.rs  protoc_gen_go.rs  protoc_gen_go_grpc.rs  rust_analyzer.rs  rust_src.rs  rust_std.rs  rust_toolchain.rs  rustc.rs  rustfmt.rs  vorpal.rs  vorpal_container_image.rs  vorpal_job.rs  vorpal_process.rs  vorpal_release.rs  vorpal_sdk_typescript.rs  vorpal_shell.rs  vorpal_user.rs  vorpal_website.rs  zlib.rs
config/src/artifact/language/: mod.rs
config/src/artifact/linux_vorpal/: mod.rs  script.rs  source.rs
config/src/cli/: mod.rs
config/src/package/: bash.rs  bash_stage_01.rs  binutils_stage_01.rs  binutils_stage_02.rs  bison.rs  bison_stage_01.rs  cargo.rs  coreutils_stage_01.rs  cross_toolchain.rs  cross_toolchain_rootfs.rs  diffutils_stage_01.rs  file_stage_01.rs  findutils_stage_01.rs  gawk_stage_01.rs  gcc_stage_01.rs  gcc_stage_02.rs  gettext.rs  gettext_stage_01.rs  glibc.rs  glibc_stage_01.rs  grep_stage_01.rs  gzip_stage_01.rs  libstdcpp_stage_01.rs  linux_headers.rs  m4_stage_01.rs  make_stage_01.rs  mod.rs  native_bash.rs  native_binutils.rs  native_coreutils.rs  native_diffutils.rs  native_gcc.rs  native_glibc.rs  native_libstdcpp.rs  native_m4.rs  native_ncurses.rs  native_patchelf.rs  native_zlib.rs  native_zstd.rs  ncurses_stage_01.rs  (+20 more)
config/src/package/language/: mod.rs
config/src/sandbox/: environments.rs  mod.rs  packages.rs  paths.rs  scripts.rs
config/src/sandbox/linux/: paths.rs
config/src/service/: mod.rs
config/src/source/: mod.rs
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  service.rs
crates/cli/: Cargo.toml
crates/cli/src/: artifact.rs  config.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: main.rs  vorpal.rs
crates/config/src/artifact/: go.rs  goimports.rs  gopls.rs  mod.rs  protoc_gen_go.rs  protoc_gen_go_grpc.rs
crates/registry/: Cargo.toml
crates/registry/src/: gha.rs  lib.rs  local.rs  s3.rs
crates/registry/src/archive/: gha.rs  local.rs  mod.rs  s3.rs
crates/registry/src/artifact/: gha.rs  local.rs  mod.rs  s3.rs
crates/schema/: Cargo.toml  build.rs
crates/schema/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/api/worker/: worker.proto
crates/sdk/src/: cli.rs  context.rs  lib.rs  system.rs
crates/sdk/src/artifact/: cargo.rs  clippy.rs  gh.rs  go.rs  goimports.rs  gopls.rs  grpcurl.rs  linux_debian.rs  linux_vorpal.rs  mod.rs  nginx.rs  protoc.rs  protoc_gen_go.rs  protoc_gen_go_grpc.rs  rust_analyzer.rs  rust_src.rs  rust_std.rs  rust_toolchain.rs  rustc.rs  rustfmt.rs  script.rs  shell.rs  staticcheck.rs  step.rs
crates/sdk/src/source/: mod.rs
crates/store/: Cargo.toml
crates/store/src/: paths.rs
crates/worker/: Cargo.toml
crates/worker/src/: artifact.rs  lib.rs  service.rs
notary/: Cargo.toml
notary/src/: lib.rs
registry/: Cargo.toml
registry/src/: gha.rs  lib.rs  local.rs  s3.rs  service.rs
schema/: Cargo.toml  build.rs
schema/api/v0/artifact/: artifact.proto
schema/api/v0/config/: config.proto
schema/api/v0/package/: package.proto
schema/api/v0/registry/: registry.proto
schema/api/v0/shell/: shell.proto
schema/api/v0/store/: store.proto
schema/api/v0/worker/: worker.proto
schema/src/: lib.rs
sdk/: Cargo.toml
sdk/codegen/: Cargo.toml
sdk/codegen/src/: main.rs
sdk/go/: .gitignore  config.go  go.mod  go.sum  main.go  vorpal.go
sdk/go/cmd/vorpal/: main.go
sdk/go/internal/artifact/: builder.go  generic.go  gh.go  gobin.go  (+13 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/script/: fix_proto_imports.py
sdk/python/tests/: test_alias.py  test_artifact.py  test_auth.py  test_builder_parity.py  test_cli.py  test_config_parity.py  test_context_server.py  test_interpreter_pin.py  test_parity.py  test_supply_chain.py  test_tls.py  test_version_equality.py
sdk/rust/: Cargo.toml  build.rs
sdk/rust/src/: artifact.rs  auth.rs  cli.rs  context.rs  lib.rs  lock.rs  service.rs  system.rs
sdk/src/config/: cli.rs  mod.rs
sdk/src/service/: mod.rs
sdk/typescript/: .gitignore  README.md  package.json  tsconfig.json
sdk/typescript/src/: artifact.ts  cli.ts  context.ts  index.ts  system.ts  vorpal.ts
store/: Cargo.toml
store/src/: archives.rs  hashes.rs  lib.rs  paths.rs  temps.rs
worker/: Cargo.toml
worker/src/: artifact.rs  lib.rs  main.rs  service.rs
worker/src/artifact/: build.rs  mod.rs
worker/src/package/: build.rs  mod.rs  prepare.rs  sandbox_default.rs
worker/src/store/: fetch.rs  mod.rs  path.rs
worker/src/worker/: build.rs  mod.rs
(+673 files in other folders)
