[package]
name = "vorpal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vorpal"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
flate2 = "1.0"
futures-util = "0.3"
git2 = "0.18"
hex = "0.4"
infer = "0.3"
process-stream = "0.4"
prost = "0.12"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha256 = "1.5"
reqwest = { version = "0.12", features = ["json"] }
tera = { version = "1", default-features = false }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
tokio-tar = "0.3"
tonic = "0.11"
url = "2.5"
uuid = { version = "1.8", features = ["v7"] }
walkdir = "2.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11"
