[package]
name = "vorpal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vorpal"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1"
async-compression = { version = "0", features = ["all"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
flate2 = "1"
futures = "0"
futures-util = "0"
git2 = "0"
hex = "0"
infer = "0"
process-stream = "0"
prost = "0"
rand = "0"
rsa = { version = "0", features = ["sha2"] }
sha256 = "1"
reqwest = { version = "0", features = ["json"] }
tera = { version = "1", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
tokio-tar = "0"
tonic = "0"
url = "2"
uuid = { version = "1", features = ["v7"] }
walkdir = "2"
tracing = "0"
tracing-subscriber = "0"

[build-dependencies]
tonic-build = "0"
