(lang dune 3.12)

(name vorpal)

(generate_opam_files true)

(source
 (github ALT-F4-LLC/vorpal))

(authors "ALT F4 LLC")

(maintainers "Erik Reinert")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name vorpal)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
