[package]
edition = "2021"
name = "vorpal-cli"
publish = false
version = "0.1.0"

[[bin]]
name = "vorpal"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.98" }
async-compression = { version = "0.4.25", features = ["all"] }
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }
aws-config = { version = "1.8.1" }
aws-sdk-s3 = { version = "1.96.0" }
base64 = { version = "0.22.1" }
clap = { version = "4.5.40" }
filetime = { version = "0.2.25" }
futures-lite = { version = "2.6.0" }
http = { version = "1.3.1" }
infer = { version = "0.19.0" }
inquire = { version = "0.9.0" }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
path-clean = { version = "1.0.1" }
petgraph = { version = "0.8.2" }
port-selector = { version = "0.1.6" }
rcgen = { version = "0.14.3", features = ["x509-parser"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rsa = { version = "0.9.8", features = ["sha2"] }
rustls = { version = "0.23.31" }
sanitize-filename = { version = "0.6.0" }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.140" }
sha256 = { version = "1.6.0" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.46.1", features = ["process", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-tar = { version = "0.3.1" }
tokio-util = { version = "0.7.15", features = ["compat"] }
toml = { version = "0.9.0" }
tonic = { version = "0.14.0", features = ["tls-ring"] }
tonic-health = { version = "0.14.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
url = { version = "2.5.4" }
uuid = { version = "1.17.0", features = ["v7"] }
vorpal-sdk = { path = "../sdk/rust" }
walkdir = { version = "2.5.0" }

[dev-dependencies]
tempfile = { version = "3.20.0" }
