[package]
edition = "2021"
name = "vorpal-cli"
publish = false
version = "0.1.0"

[[bin]]
name = "vorpal"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.100" }
async-compression = { version = "0.4.37", features = ["all"] }
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }
aws-config = { version = "1.8.1" }
aws-sdk-s3 = { version = "1.96.0" }
base64 = { version = "0.22.1" }
clap = { version = "4.5.57" }
crossterm = { version = "0.29", features = ["event-stream"] }
filetime = { version = "0.2.27" }
fs4 = { version = "0.13.1" }
futures-lite = { version = "2.6.1" }
http = { version = "1.4.0" }
infer = { version = "0.19.0" }
inquire = { version = "0.9.2" }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
moka = { version = "0.12.13", features = ["future"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
path-clean = { version = "1.0.1" }
petgraph = { version = "0.8.3" }
port-selector = { version = "0.1.6" }
pulldown-cmark = { version = "0.13", default-features = false }
ratatui = { version = "0.30", features = ["crossterm"] }
rcgen = { version = "0.14.7", features = ["aws_lc_rs", "x509-parser"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rsa = { version = "0.9.10", features = ["sha2"] }
rustls = { version = "0.23.36" }
sanitize-filename = { version = "0.6.0" }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = { version = "1.0.149" }
sha256 = { version = "1.6.0" }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
thiserror = { version = "2.0.18" }
tokio = { version = "1.49.0", features = ["net", "process", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.18", features = ["io-util", "net"] }
tokio-tar = { version = "0.3.1" }
tokio-util = { version = "0.7.18", features = ["compat"] }
toml = { version = "0.9.11" }
tonic = { version = "0.14.3", features = ["tls-ring"] }
tonic-health = { version = "0.14.3" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22" }
unicode-width = { version = "0.2.2" }
url = { version = "2.5.8" }
uuid = { version = "1.20.0", features = ["v7"] }
vorpal-sdk = { path = "../sdk/rust" }
walkdir = { version = "2.5.0" }

[dev-dependencies]
tempfile = { version = "3.24.0" }
