[package]
edition = "2021"
name = "vorpal-config"
publish = false
version = "0.1.0"

[[bin]]
name = "vorpal-config"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.98" }
home = { version = "0.5.11" }
indoc = { version = "2.0.6" }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
vorpal-sdk = { path = "../sdk/rust" }
