[package]
edition = "2021"
name = "vorpal-config"
publish = false
version = "0.1.0"

[[bin]]
name = "vorpal-config"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.100" }
indoc = { version = "2.0.7" }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
vorpal-sdk = { path = "../sdk/rust" }
