[package]
name = "vorpal-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { default-features = false, version = "1" }
aws-config = { default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls", "sso"], version = "1" }
aws-sdk-s3 = { default-features = false, version = "1" }
reqwest = { default-features = false, version = "0", features = ["json", "rustls-tls"] }
rsa = { default-features = false, version = "0" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { default-features = false, features = ["process", "rt-multi-thread"], version = "1" }
tokio-stream = { default-features = false, features = ["io-util"], version = "0" }
tonic = { default-features = false, version = "0" }
tracing = { default-features = false, version = "0" }
vorpal-notary = { default-features = false, path = "../notary" }
vorpal-schema = { default-features = false, path = "../schema" }
vorpal-store = { default-features = false, path = "../store" }
