[package]
name = "vorpal-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { default-features = false, version = "1" }
async-compression = { default-features = false, features = ["bzip2", "gzip", "tokio", "xz", "zstd"], version = "0" }
async_zip = { default-features = false, features = ["deflate", "tokio"], version = "0" }
futures-lite = { default-features = false, version = "2" }
sanitize-filename = { default-features = false, version = "0" }
sha256 = { default-features = false, version = "1" }
tokio = { default-features = false, version = "1" }
tokio-tar = { default-features = false, version = "0" }
tokio-util = { default-features = false, features = ["compat"], version = "0" }
tracing = { default-features = false, version = "0" }
uuid = { default-features = false, features = ["std", "v7"], version = "1" }
vorpal-schema = { default-features = false, path = "../schema" }
walkdir = { default-features = false, version = "2" }
