[package]
name = "vorpal-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bollard = { version = "0", features = ["buildkit"] }
futures-util = "0"
hex = "0"
rsa = { version = "0", features = ["sha2"] }
tera = { version = "1", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-process-stream = "0"
tokio-stream = "0"
tonic = "0"
tracing = "0"
uuid = { version = "1", features = ["v7"] }
vorpal-notary = { path = "../notary" }
vorpal-schema = { path = "../schema" }
vorpal-store = { path = "../store" }

[build-dependencies]
tonic-build = "0"
