[package]
name = "vorpal-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["process", "rt-multi-thread"], version = "1" }
tokio-stream = { default-features = false, features = ["io-util"], version = "0" }
tonic = { default-features = false, version = "0" }
tracing = { default-features = false, version = "0" }
vorpal-notary = { default-features = false, path = "../notary" }
vorpal-schema = { default-features = false, path = "../schema" }
vorpal-store = { default-features = false, path = "../store" }
