[package]
name = "vorpal-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { default-features = false, version = "1" }
async-compression = { version = "0", features = ["all"] }
infer = { default-features = false, version = "0" }
reqwest = { default-features = false, version = "0", features = ["json", "rustls-tls"] }
serde_json = { default-features = false, features = ["std"], version = "1" }
sha256 = { default-features = false, version = "1" }
tokio = { default-features = false, version = "1" }
tokio-stream = { default-features = false, version = "0" }
tokio-tar = { default-features = false, version = "0" }
tonic = { default-features = false, version = "0" }
url = { default-features = false, version = "2" }
vorpal-schema = { default-features = false, path = "../schema" }
vorpal-store = { default-features = false, path = "../store" }
