[package]
name = "vorpal-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
async-compression = { features = ["bzip2", "xz"], version = "0" }
infer = { version = "0" }
reqwest = { default-features = false, features = ["rustls-tls"], version = "0" }
serde_json = { version = "1" }
sha256 = { version = "1" }
tokio = { version = "1" }
tokio-stream = { version = "0" }
tokio-tar = { version = "0" }
tonic = { version = "0" }
url = { version = "2" }
vorpal-schema = { path = "../schema" }
vorpal-store = { path = "../store" }
