[package]
name = "vorpal-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vorpal"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
clap = { version = "4" }
console = { version = "0" }
petgraph = { version = "0" }
port-selector = { version = "0" }
serde_json = { version = "1" }
tokio = { version = "1" }
tokio-stream = { version = "0" }
tonic = { version = "0" }
tonic-health = { version = "0" }
tracing = { version = "0" }
tracing-subscriber = { version = "0" }
vorpal-agent = { path = "../agent" }
vorpal-registry = { path = "../registry" }
vorpal-schema = { path = "../schema" }
vorpal-sdk = { path = "../sdk" }
vorpal-store = { path = "../store" }
vorpal-worker = { path = "../worker" }
