[package]
name = "vorpal-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
aws-config = { version = "1" }
aws-sdk-s3 = { version = "1" }
reqwest = { default-features = false, features = ["json"], version = "0" }
rsa = { version = "0" }
serde = { version = "1" }
serde_json = { version = "1" }
sha256 = { version = "1" }
thiserror = { version = "2" }
tokio = { version = "1" }
tokio-stream = { version = "0" }
tonic = { version = "0" }
tracing = { version = "0" }
vorpal-schema = { path = "../schema" }
vorpal-store = { path = "../store" }
