[package]
name = "vorpal-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "0" }
serde = { features = ["serde_derive"], version = "1" }
tonic = { version = "0" }

[build-dependencies]
tonic-build = { version = "0" }

[package.metadata.cargo-machete]
ignored = ["prost", "serde", "tonic-build"]
