[package]
name = "vorpal-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
clap = { features = ["derive"], version = "4" }
indoc = { version = "2" }
serde = { version = "1" }
serde_json = { version = "1" }
sha256 = { version = "1" }
toml = { version = "0" }
tonic = { version = "0" }
tracing = { version = "0" }
vorpal-schema = { path = "../schema" }
