[package]
description = "Vorpal SDK for building Vorpal configurations."
edition = "2021"
license = "Apache-2.0"
name = "vorpal-sdk"
repository = "https://github.com/ALT-F4-LLC/vorpal"
version = "0.1.0"

[dependencies]
anyhow = { version = "1" }
clap = { features = ["derive"], version = "4" }
indoc = { version = "2" }
prost = { version = "0" }
serde = { features = ["serde_derive"], version = "1" }
serde_json = { version = "1" }
sha256 = { version = "1" }
toml = { version = "0" }
tonic = { version = "0" }
tracing = { version = "0" }

[build-dependencies]
tonic-build = { version = "0" }

[package.metadata.cargo-machete]
ignored = ["prost", "serde", "tonic-build"]
