[package]
name = "vorpal-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { default-features = false, version = "1" }
async-compression = { default-features = false, features = ["bzip2", "gzip", "tokio", "xz", "zstd"], version = "0" }
async_zip = { default-features = false, features = ["deflate", "tokio"], version = "0" }
filetime = { default-features = false, version = "0" }
futures-lite = { default-features = false, version = "2" }
rand = { default-features = false, features = ["getrandom", "std", "std_rng"], version = "0" }
rsa = { default-features = false, features = ["pem", "pkcs5", "sha2", "std"], version = "0" }
sanitize-filename = { default-features = false, version = "0" }
sha256 = { default-features = false, version = "1" }
tokio = { default-features = false, version = "1" }
tokio-tar = { default-features = false, version = "0" }
tokio-util = { default-features = false, features = ["compat"], version = "0" }
tracing = { default-features = false, version = "0" }
uuid = { default-features = false, features = ["std", "v7"], version = "1" }
walkdir = { version = "2" }
