[package]
name = "vorpal-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
async-compression = { features = ["all"], version = "0" }
async_zip = { features = ["deflate", "tokio"], version = "0" }
filetime = { version = "0" }
futures-lite = { version = "2" }
rsa = { features = ["sha2"], version = "0" }
sanitize-filename = { version = "0" }
sha256 = { version = "1" }
tokio = { version = "1" }
tokio-tar = { version = "0" }
tokio-util = { features = ["compat"], version = "0" }
tracing = { version = "0" }
uuid = { features = ["v7"], version = "1" }
walkdir = { version = "2" }
