[package]
name = "vorpal-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
serde_json = { version = "1" }
sha256 = { version = "1" }
tokio = { features = ["process"], version = "1" }
tokio-stream = { features = ["io-util"], version = "0" }
tonic = { version = "0" }
tracing = { version = "0" }
vorpal-schema = { path = "../schema" }
vorpal-sdk = { path = "../sdk" }
vorpal-store = { path = "../store" }
