[package]
build = "build.rs"
description = "Vorpal SDK for building Vorpal configurations."
edition = "2021"
license = "Apache-2.0"
name = "vorpal-sdk"
repository = "https://github.com/ALT-F4-LLC/vorpal"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4.5.57", features = ["derive"] }
http = { version = "1.4.0" }
indoc = { version = "2.0.7" }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
prost = { version = "0.14.3" }
reqwest = { version = "0.13.0", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = { version = "1.0.149" }
sha256 = { version = "1.6.0" }
tokio = { version = "1.49.0", features = ["process", "rt-multi-thread"] }
toml = { version = "0.9.11" }
tonic = { version = "0.14.3", features = ["tls-ring"] }
tonic-prost = { version = "0.14.3" }
tracing = { version = "0.1.44" }

[build-dependencies]
tonic-prost-build = { version = "0.14.3" }

[package.metadata.cargo-machete]
ignored = ["prost", "serde", "tonic-build"]
